--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,4 +1,12 @@
 /* apply a natural box layout model to all elements, but allowing compnents to change */
+@import "bourbon";
+@import "neat";
+@import "normalize";
+
+
+$fa-font-path: "//netdna.bootstrapcdn.com/font-awesome/4.3.0/fonts";
+@import "font-awesome";
+
 html {
   box-sizing: border-box;
 }
