--- a/sass/app.scss
+++ b/sass/app.scss
@@ -26,19 +26,18 @@ a {
   background: blue;
 }
 
-/* HEADER STYLES */
+/** TOP CONNECTION HEADER STYLES **/
 .top_connect {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
   height: 4rem;
   background: red;
+  line-height: 6rem;
 }
 .sub_link {
+  padding-right: 3rem;
   font-size: 0.7rem;
-  border-right: 1px #eee dotted;
-}
-.social_link {
-  line-height: 0;
-  font-size: 0;
-  color: transparent;
 }
 .fa {
   flex: 1 0 auto;
@@ -47,4 +46,26 @@ a {
   line-height: 1.5rem;
   text-align: center;
   border: 1px orange solid;
+  color: #eee;
+}
+//  a .social_link {
+//   line-height: 0;
+//   font-size: 0;
+//   color: transparent;
+// }
+
+/** NAVBAR HEADING STYLES **/
+ul {
+  display: flex;
+  justify-content: flex-start;
+}
+li {
+  flex: 0 0 auto;
+  height: 2.5rem;
+  width: 12rem;
+  text-align: center;
+  line-height: 2.5rem;
+  list-style: none;
+  border: 1px #eee solid;
+  background: purple;
 }
