Adding cropped images individually

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -110,9 +110,10 @@ a {
   float: right;
 }
 .skater-grid h1 {
-
-
   text-align: center;
+  white-space:  pre-wrap;
+  font-size: 2rem;
+  font-weight: bolder;
 }
 
 
