--- a/sass/app.scss
+++ b/sass/app.scss
@@ -85,7 +85,7 @@ a {
 .article-link  {
   text-align: center;
   font-weight: bolder;
-  color: red;
+  color: #8f131e;
 }
 
 /** SKATER GRID **/
@@ -110,10 +110,19 @@ a {
   float: right;
 }
 .skater-grid h1 {
+  margin: 0;
+  padding: 0;
   text-align: center;
-  white-space:  pre-wrap;
+  text-transform: uppercase;
   font-size: 2rem;
-  font-weight: bolder;
+  font-weight: bold;
+}
+
+/** SKATEBOARD GRID **/
+.skateboard-grid img {
+  flex: auto;
+  margin: 0.6rem;
+  padding-left: 1rem;
 }
 
 
