--- a/sass/top-nav.scss
+++ b/sass/top-nav.scss
@@ -14,7 +14,7 @@ li {
   text-align: center;
   line-height: 2.5rem;
   list-style: none;
-  border: 1px #eee solid;
-  background: purple;
+  border: 1px #b51d2a solid;
+  background: #b51d2a;
   color: #eee;
 }
