--- a/sass/app.scss
+++ b/sass/app.scss
@@ -10,7 +10,7 @@ $fa-font-path: "//netdna.bootstrapcdn.com/font-awesome/4.3.0/fonts";
 /* GLOBAL STYLING */
 html {
   box-sizing: border-box;
-  // background: url(img/bg.jpg);
+  background: url(img/bg.jpg);
 }
 *, *::before, *::after {
   box-sizing: inherit;
@@ -49,6 +49,7 @@ a {
 }
 .radio-btns {
   text-align: center;
+  padding: 0.5rem;
 }
 
 /** ARTICLE GRIDS **/
@@ -92,7 +93,7 @@ a {
   position: relative;
   overflow: auto;
 }
-h2 {
+.skater-grid h2 {
   position: absolute;
   right: 100%;
   width: 12rem;
@@ -105,13 +106,13 @@ h2 {
   font-weight: bolder;
   color: #eee;
 }
-h2::before {
-position: absolute;
-width: 0;
-height: 0;
-border-style: solid;
-border-width: 50px 0 50px 86.6px;
-border-color: transparent transparent transparent #b51d2a;
+skater-grid h2::before {
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 50px 0 50px 86.6px;
+  border-color: transparent transparent transparent #b51d2a;
 }
 
 .img-grid__sec {
@@ -151,6 +152,7 @@ border-color: transparent transparent transparent #b51d2a;
 
 /** SKATEBOARD GRID **/
 .skateboard-grid {
+  margin-top: 2rem;
   background: white;
 }
 .skateboard-grid img {
@@ -163,3 +165,4 @@ border-color: transparent transparent transparent #b51d2a;
 
 @import "page-header.scss";
 @import "top-nav.scss";
+@import "site-info"
