--- a/sass/site-info.scss
+++ b/sass/site-info.scss
@@ -12,6 +12,9 @@
   width: calc(50% - 2rem);
   margin: 1rem;
 }
+.site-info h2 {
+  color: $skater-black;
+}
 .site-info .fa {
   margin: 0.1rem;
   height: 1.3rem;
@@ -23,7 +26,10 @@
   border: 1px transparent solid;
   color: lightgrey;
 }
+
+/** CONTACT FORM STYLES **/
 .contact-form {
+  position: relative;
   width: calc(50% - 2rem);
   margin: 1rem;
 }
@@ -44,6 +50,10 @@
 }
 .label {
   text-align: left;
+  vertical-align: middle;
+  text-transform: uppercase;
+  font-weight: normal;
+  color: lighten($skater-black, 60%);
 }
 .sub-btn {
   float: right;
@@ -52,6 +62,6 @@
   height: 2.5rem;
   width: 10rem;
   border: none;
-  background: #b51d2a;
-  color: #eee;
+  background: $skater-red;
+  color: $skater-white;
 }
