styling global color variables

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -3,9 +3,10 @@
 @import "neat";
 @import "normalize";
 
-$skater-black: #292b29;
-$skater-red: #b51d2a;
-$skater-white:#e9e7e7;
+$skater_black: #292b29;
+$skater_light_black: adjust-hue($skater_black, 25deg);
+$skater_red: #b51d2a;
+$skater_white:#e9e7e7;
 $fa-font-path: "//netdna.bootstrapcdn.com/font-awesome/4.3.0/fonts";
 @import "font-awesome";
 
@@ -21,7 +22,7 @@ html {
 
 a {
   text-decoration: inherit;
-  color: #e9e7e7;
+  color: $skater_white;
 }
 
 .container {
@@ -40,7 +41,7 @@ a {
   flex: 1;
   width: 100%;
   top: 20%;
-  border: 0.6rem #eee solid;
+  border: 0.6rem $skater_white solid;
 }
 .hero-logo {
   position: absolute;
@@ -52,6 +53,7 @@ a {
 }
 .radio-btns {
   text-align: center;
+  margin-top: 1rem;
   padding: 0.5rem;
 }
 
@@ -67,12 +69,12 @@ a {
   margin: 0.6rem 0.3rem;
   padding: 1rem;
   text-align: left;
-  border: 1px #eee solid;
-  background: #eee;
+  border: 1px $skater_white solid;
+  background: $skater_white
 }
 .three-up h2 {
   font-size: 1.7rem;
-  color: #292b29;
+  color: $skater_black;
 }
 .three-up h4 {
   font-size: 1rem;
@@ -83,18 +85,19 @@ a {
 .three-up p {
   flex: 1;
   line-height: 1.5rem;
-  color: #292b29;
+  color: $skater_light_black;
 }
 .article-link  {
   text-align: center;
   font-weight: bolder;
-  color: #b51d2a;
+  color: $skater_red;
 }
 
 /** SKATER GRID **/
 .skater-grid {
   position: relative;
   overflow: auto;
+  margin-top: 2rem;
 }
 .skater-grid h2 {
   position: absolute;
@@ -103,8 +106,8 @@ a {
   height: 4rem;
   margin: 0;
   padding: 1rem 0 1rem 0.5rem;
-  border: 2px #b51d2a solid;
-  background: #b51d2a;
+  border: 2px $skater-red solid;
+  background: $skater_red;
   font-size: 1.2rem;
   font-weight: bolder;
   color: #eee;
@@ -115,14 +118,14 @@ a {
   height: 0;
   border-style: solid;
   border-width: 50px 0 50px 86.6px;
-  border-color: transparent transparent transparent #b51d2a;
+  border-color: transparent transparent transparent $skater_red;
 }
 
 .img-grid__sec {
   float: left;
   position: relative;
   margin: 4px;
-  border: 5px #eee solid;
+  border: 5px $skater_white solid;
   width: calc(33.33% - 8px);
 }
 .img-grid__sec img {
