--- a/sass/page-header.scss
+++ b/sass/page-header.scss
@@ -14,6 +14,7 @@ header {
   padding-right: 3.5rem;
   font-size: 0.7rem;
   color: $skater-white;
+  text-shadow: grayscale($skater_black);
   font-weight: bold;
 }
 .fa {
