--- a/sass/top-nav.scss
+++ b/sass/top-nav.scss
@@ -15,6 +15,6 @@ li {
   line-height: 2.5rem;
   list-style: none;
   border: 1px $skater-red solid;
-  background: $skater-red;
-  color: $skater-white;
+  background: $skater_red;
+  color: $skater_white;
 }
