--- a/sass/top-nav.scss
+++ b/sass/top-nav.scss
@@ -15,6 +15,7 @@ li {
   line-height: 2.5rem;
   list-style: none;
   border: 1px $skater-red solid;
+  box-shadow: 0 5px 0 $shadow_grey;
   background: $skater_red;
   color: $skater_white;
 }
