--- a/sass/mobile.scss
+++ b/sass/mobile.scss
@@ -1,7 +1,5 @@
-@media only screen and (max-width: 460px) {
-  .container {
-    flex: 1 0 calc(100%);
-  }
+@media only screen and (max-width: 480px) {
+
   .nav-items {
     display: none;
   }
@@ -9,21 +7,21 @@
     display: none;
   }
   .hero-logo {
-    flex: 1 0 100%;
-    top: 20%;
-    width: 370px;
-    padding: 1rem;
+    width: 100%;
+    top: 10%;
+    // padding: 6rem;
     border: 6px $skater_red solid;
     background: $skater_white;
   }
   .article-grid {
-    flex: auto;
     flex-direction: column;
-    margin-left: 20%;
-    margin-top: 14em;
+    width: 100%;
+    margin: auto;
   }
   .skater-grid {
-    display: none;
+    flex-wrap: wrap;
+    justify-content: center;
+    float: none;
   }
   .skater-grid h2 {
     display: none;
@@ -32,7 +30,9 @@
     font-size: 0.4rem;
   }
   .skateboard-grid {
-    display: none;
+    flex-wrap: wrap;
+    justify-content: center;
+    float: none;
   }
   .contact-form {
     flex: auto;
