--- a/sass/site-info.scss
+++ b/sass/site-info.scss
@@ -32,13 +32,12 @@
 /** CONTACT FORM STYLES **/
 .contact-form {
   overflow: hidden;
-  width: calc(50% - 2rem);
-  margin: 1rem;
+  width: calc(50% - 5.5rem);
+  margin: auto;
 }
 .contact-info {
-  display: block;
-  text-align: right;
-  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
 }
 #name, #email {
   height: 2.5rem;
@@ -54,7 +53,7 @@
 }
 .sub-btn {
   float: right;
-  margin-right: 0.5rem;
+  margin-right: 1.5rem;
   margin-top: 1rem;
   height: 2.5rem;
   width: 15rem;
