--- a/sass/top-nav.scss
+++ b/sass/top-nav.scss
@@ -1,13 +1,11 @@
 /** TOP NAVBAR HEADING STYLES **/
 ul {
   display: flex;
-  margin: auto;
-  justify-content: flex-start;
   padding-left: 0;
 
 }
 li {
-  flex: 1 0 calc(25% - 4rem);
+  flex: 1;
   margin: 1rem;
   height: 2.5rem;
   width: 13.5rem;
